kubernetes/addons/iam/oauth2-proxy/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oauth2-proxy
  annotations:
    kubernetes.io/ingress.class: traefik-external
    external-dns.alpha.kubernetes.io/target: javiersant.com
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`oauth.javiersant.com`)
      kind: Rule
      services:
        - name: oauth2-proxy
          port: 80
      middlewares:
        - name: auth-headers
  tls:
    secretName: wildcard-javstudio-org-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wildcard-auth
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`*.javiersant.com`) && PathPrefix(`/oauth2/`) || (PathPrefix(`/oauth2/`)
      kind: Rule
      services:
        - name: oauth2-proxy
          port: 80
      middlewares:
        - name: auth-headers
  tls:
    secretName: wildcard-javstudio-org-tls
